# softhooky

./: .env.example  .env.production  .gitignore  build-server.js  build-tauri.sh  build_all.py  ecosystem.config.cjs  fix-omni.cjs  index.html  package-lock.json  package.json  publish-tauri.js  publish.js  server.cjs  server.js  server.ts  vite.config.ts
.ai/docs/: video-studio-prd.md
.github/workflows/: build-tauri.yml  tauri-build.yml
.trae/documents/: video-page-architecture.md  video-page-prd.md
deploy/updates/: update-manifest.json
dist_installers/: Softhooky_1.1.0_x64-setup.exe.sig
public/: amazon-white-bg.html  payment-success.html
scripts/: clean.mjs  gen-agent-config.py  publish.sh  validate-tauri.mjs
skills/: README.md  example.ts  product-refinement.md  product-refinement.ts
src/: App.tsx  index.css  main.tsx  tauri.ts  vite-env.d.ts
src-tauri/: Cargo.toml  generate-icons.mjs  tauri.conf.json  updater.key.pub
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AJCaptcha.tsx  AuthModal.tsx  ChatArea.tsx  ChineseCharCaptcha.tsx  ConversationList.tsx  CouponClaimModal.tsx  CouponCreditNotice.tsx  CreditCheckModal.tsx  ImagePreviewModal.tsx  LeftSidebar.tsx  LoadingAnimation.tsx  ModelLibraryPicker.tsx  ModelSpeedNote.tsx  PrivacyModal.tsx  PsdExportButton.tsx  ReEditModal.tsx  SubAccountManager.tsx  TauriUpdater.tsx  TermsModal.tsx  TianaiCaptcha.tsx  TitleBar.tsx  Toast.tsx  UpdateButton.tsx  UserMenuWithModals.tsx
src/constants/: languages.ts
src/mobile/: MobileApp.tsx  (+2 more)
(+134 files in other folders)
