[package]
name = "softhooky"
version = "1.0.5"
description = "Softhooky - 智能设计平台"
authors = ["Softhooky"]
edition = "2021"

[lib]
name = "softhooky_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
